--- a/Cleaning Project/index.html
+++ b/Cleaning Project/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 	<div id="top">
-		<a href="#" onclick="toTop(); return false;"><img src="images/top"></a>
+		<a href="#" onclick="toTop(); return false;"><img src="images/top.png"></a>
 	</div>
 	<div id="page1">
+	<div id="cover">
 		<div id="header">
 			<div id="nav">
 				<ul>
@@ -19,23 +20,24 @@
 			</div>
 		</div>
 		<div id="homepage">
-			<div id="welcome">
-				<img src="images/cloud.png">
-				<h1 >ICloud</h1> 
-				<h2 id="some1">Cleaning Services</h2>
-			</div>
+			<img src="images/cloud.png">
 		</div>
+	</div>
 	</div>
 
 	<div id="intro">
 		<div id="intro-infro">
 			<h1>Why<br>ICloud</h1>
+		  <div class="img"><img src="images/7days.png"></div>
+		  <div class="img"><img src="images/ecofriendly.png"></div>
+		  <div class="img"><img src="images/nyc.png"></div>
 		</div>
 	</div>
 
 	<div id="page2">
 		<div id="home-info">
-			<h1>What does this include</h1>
+			<h1>Home</h1>
+			<h2>What does this include</h2>
 			<p>We offer a variety of home cleaning service</p>
 			<button class="accordion">Bedroom & Living Room</button>
 			<div class="panel">
@@ -59,7 +61,6 @@
 		<div id="home">
 		<div id="home-gra">
 			<img src="images/home.jpg">	
-			<h1>Home</h1>
 		</div>
 		</div>
 	</div>
