--- a/Cleaning Project/index.html
+++ b/Cleaning Project/index.html
@@ -9,7 +9,8 @@
 		<a href="#" onclick="toTop(); return false;"><img src="images/top.png"></a>
 	</div>
 	<div id="page1">
-	<div id="cover">
+	<div class="parallax"></div>
+	<div id="cover"></div>
 		<div id="header">
 			<div id="nav">
 				<ul>
@@ -27,7 +28,7 @@
 
 	<div id="intro">
 		<div id="intro-infro">
-			<h1>Why<br>ICloud</h1>
+			<h1>Why<br>ICloud?</h1>
 		  <div class="img"><img src="images/7days.png"></div>
 		  <div class="img"><img src="images/ecofriendly.png"></div>
 		  <div class="img"><img src="images/nyc.png"></div>
