--- a/Cleaning Project/index.html
+++ b/Cleaning Project/index.html
@@ -12,13 +12,12 @@
 	<div class="parallax"></div>
 	<div id="cover"></div>
 		<div id="header">
-			<div id="nav">
-				<ul>
-					<a href="#intro"><li id="word">Why ICloud</li></a>
-					<a href="#page2"><li id="word">Home</li></a>
-					<a href="#page3"><li id="word">Buisness</li></a>
-				</ul>
-			</div>
+			<ul>
+				<img src="images/cloud.png"> 
+				<a href="#intro"><li id="word">Why ICloud</li></a>
+				<a href="#page2"><li id="word">Home</li></a>
+				<a href="#page3"><li id="word">Buisness</li></a>
+			</ul>
 		</div>
 		<div id="homepage">
 			<img src="images/cloud.png">
